Fix responsiveness of Meshery.io page on Mobile phones
By fixing bug of right parallel polygon and section layout
overflowing.

--- a/_sass/integrations.scss
+++ b/_sass/integrations.scss
@@ -9,6 +9,10 @@
     z-index:2;
     position:relative;
 
+    @media screen and (max-width: 480px) {
+      overflow-x: hidden;
+    }
+
     & h1 {
       line-height: 3.75rem;
       font-size: 3.125rem;
