--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -566,7 +566,7 @@ hr {
 
 }
 
-@media screen and (max-width:360px) {
+@media screen and (max-width: 480px) {
     section {
         padding: 50px 9px;
         overflow-x: hidden;
